feat: 자동차 경주 게임 결과를 조회하는 기능을 추가한다