@@ -4,7 +4,6 @@ import racingcar.domain.Car;
 import racingcar.domain.dao.CarDao;
 import racingcar.domain.dao.entity.CarEntity;
 
-import java.util.Collections;
 import java.util.List;
 
 public class MockCarDao implements CarDao {
@@ -14,6 +13,8 @@ public class MockCarDao implements CarDao {
 
     @Override
     public List<CarEntity> findAll(final Long resultId) {
-        return Collections.emptyList();
+        return List.of(new CarEntity(1L, "pobi", 10),
+                new CarEntity(2L, "crong", 5),
+                new CarEntity(3L, "honux", 3));
     }
 }
